# ehdtd_daemon

./: .gitignore  LICENSE  README.md  pyproject.toml
db_scripts/mysql/: db-create.sh  db-create.sql
db_scripts/postgresql/: db-create.sh  db-create.sql
debian/: dbconfig-examples.tar.bz2  make-debian-package.sh  make-ehdtd-daemon-debian-pkg.sh  roundcube-core.config  roundcube-core.postinst  roundcube-core.postrm  roundcube-core.preinst  roundcube-core.prerm
debian-pkg/: make-ehdtd-daemon-debian-pkg.sh
debian/ehdtd-daemon/DEBIAN/: config  control  postinst  postrm  prerm
debian/ehdtd-daemon/usr/sbin/: ehdtd-daemon
debian/ehdtd-daemon/usr/share/doc/ehdtd-daemon/: LICENSE  pyproject.toml
debian/ehdtd-daemon/usr/share/ehdtd-daemon/config-skels/: ehdtd-daemon.default
debian/pkg-scripts-examples/: config-dist  control  postgresql-config.php  postinst-dist  postrm-dist  preinst-dist  prerm-dist
debian/skel/: build-depends.txt
debian/skel/DEBIAN/: config  control  postinst  postrm  preinst  prerm
debian/systemd/: ehdtd-daemon.service  ehdtd-daemon.sh
ehdtd_daemon/: __init__.py  aux_common_functions.py
ehdtd_daemon/etc/ehdtd-daemon/: ehdtd-daemon-config-sample.yaml
etc/ehdtd-daemon/: ehdtd-daemon-config-sample.yaml
