[tool.poetry]
name = "ehdtd-daemon"
version = "0.2.5"
description = "Daemon script for ehdtd package"
authors = ["Ricardo Marcelo Alvarez <rmalvarezkai@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rmalvarezkai/ehdtd_daemon"
include = ["ehdtd_daemon/etc/ehdtd-daemon/ehdtd-daemon-config-sample.yaml"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
importlib = "^1.0.4"
logging = "^0.4.9.6"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
ehdtd = ">=0.2.20"

[tool.poetry.scripts]
ehdtd_daemon = 'ehdtd_daemon.bin.ehdtd_daemon:main'

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-xdist = "^3.5.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



