[tool.poetry]
name = "ehdtd-daemon"
version = "0.2.14"
description = "Daemon script for ehdtd package"
authors = ["Ricardo Marcelo Alvarez <rmalvarezkai@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rmalvarezkai/ehdtd_daemon"
include = ["ehdtd_daemon/etc/ehdtd-daemon/ehdtd-daemon-config-sample.yaml"]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
importlib = "^1.0.4"
logging = "^0.4.9.6"
psycopg2-binary = "^2.9.10"
pymysql = "^1.1.1"
ehdtd = "^0.2.30"

[tool.poetry.scripts]
ehdtd_daemon = 'ehdtd_daemon.bin.ehdtd_daemon:main'

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
